# hyporo-cpp

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake  glad.cmake  googletest.cmake  hpr-macros.cmake  hprConfig.cmake.in  imgui.cmake  macros.cmake  occt.cmake  stb.cmake
cmake/templates/: Config.cmake.in
cmake/toolchains/: linux-gcc.cmake  mingw-gcc.cmake
docs/: CMakeLists.txt
docs/api/: Doxyfile.in
source/: CMakeLists.txt
source/applications/: CMakeLists.txt
source/applications/fes/: CMakeLists.txt  fes.cpp  fes.xlsx
source/applications/periodic/: CMakeLists.txt  cell.hpp  cluster.hpp  lattice.hpp  periodic.cpp
source/creator/: CMakeLists.txt  application.hpp  camera.hpp  creator.cpp  drawable.hpp  entity.hpp  grid.hpp  ray.hpp  scene.hpp  shaders.hpp  test.cpp  test2-back.cpp  test2.cpp  test3.cpp  transform.hpp  ui.hpp  visual.hpp
source/creator/cmake/: mingw-pre-pack.cmake.in
source/hpr/: CMakeLists.txt  containers.hpp  csg.hpp  exception.hpp  geometry.hpp  gpu.hpp  hpr.cpp  hpr.hpp  io.hpp  math.hpp  mesh.hpp  parallel.hpp  window_system.hpp
source/hpr/containers/: CMakeLists.txt  array.hpp  graph.hpp
source/hpr/containers/array/: algorithm.hpp  dynamic_array.hpp  iterator.hpp  sequence.hpp  static_array.hpp
source/hpr/containers/graph/: tree_node.hpp
source/hpr/containers/tests/: CMakeLists.txt  containers-test.cpp
source/hpr/core/: CMakeLists.txt  common.hpp
source/hpr/csg/: CMakeLists.txt  boolean.hpp  compound.hpp  edge.hpp  face.hpp  generation.hpp  geometry.hpp  shape.cpp  shape.hpp  shell.hpp  solid.hpp  surface.hpp  transformation.hpp  vertex.hpp  wire.hpp
source/hpr/csg/tests/: CMakeLists.txt  csg-test.cpp
source/hpr/geometry/: CMakeLists.txt  polytope.hpp  tetrahedron.hpp  triangle.hpp
source/hpr/gpu/: CMakeLists.txt  array_object.cpp  array_object.hpp  buffer.cpp  buffer.hpp  buffer_object.cpp  buffer_object.hpp  camera.hpp  color_buffer.hpp  common.hpp  context.hpp  cull_face.hpp  depth_buffer.hpp  device.cpp  device.hpp  framebuffer.hpp  gpu.cpp  monitor.hpp  render_target.hpp  renderbuffer.hpp  scene.hpp  shader.cpp  shader.hpp  shader_program.hpp  stencil_buffer.hpp  texture.cpp  texture.hpp  viewer.hpp  viewport.hpp  window.hpp
source/hpr/gpu/opengl/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  device.cpp  device.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp
source/hpr/gpu/shaders/: test.frag.glsl
source/hpr/io/: CMakeLists.txt  file.cpp  file.hpp  logger.hpp
source/hpr/io/tests/: io-test.cpp
source/hpr/math/: CMakeLists.txt  integer.hpp  matrix.hpp  quaternion.hpp  scalar.hpp  vector.hpp
source/hpr/math/integer/: integer.hpp  size.hpp
source/hpr/math/matrix/: clip_space.hpp  matrix.hpp  matrix_space.hpp  transform.hpp
source/hpr/math/quaternion/: quaternion.hpp
source/hpr/math/scalar/: scalar.hpp
source/hpr/math/tests/: math-test.cpp
source/hpr/math/vector/: vector.hpp  vector_space.hpp
source/hpr/mesh/: CMakeLists.txt  cell.hpp  edge.hpp  face.hpp  mesh.cpp  mesh.hpp  vertex.hpp
source/hpr/mesh/tests/: CMakeLists.txt  hmesh-test.cpp
source/hpr/parallel/: CMakeLists.txt  parallel.hpp
source/hpr/window_system/: CMakeLists.txt  window.cpp  window_system.cpp  window_system.hpp
source/hpr/window_system/glfw/: monitor.hpp  window_system.cpp  window_system.hpp
source/hyporo/: CMakeLists.txt
source/hyporo/csg/: CMakeLists.txt  compound.hpp  csg.hpp  shape.hpp  solid.hpp  surface.hpp  vertex.hpp
source/hyporo/csg/tests/: csg-test.cpp
source/hyporo/gpu/: CMakeLists.txt  buffer.cpp  buffer.hpp  context.cpp  context.hpp  device.cpp  device.hpp  monitor.cpp  monitor.hpp  render_target.cpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp  window_context.hpp  window_system.cpp  window_system.hpp
source/hyporo/gpu/glfw/: monitor.cpp  monitor.hpp  window.cpp  window.hpp  window_system.cpp  window_system.hpp
source/hyporo/gpu/opengl/: buffer.cpp  buffer.hpp  context.cpp  context.hpp  device.cpp  device.hpp  render_target.cpp  render_target.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  texture.cpp  texture.hpp
source/hyporo/gpu/shaders/: base.frag.glsl  base.vert.glsl
source/hyporo/hmesh/: CMakeLists.txt  Cell.hpp  Edge.hpp  Face.hpp  Mesh.hpp  Vertex.hpp  Vertex.hxx  cell.hpp  edge.hpp  face.hpp  mesh.hpp  vertex.hpp
source/hyporo/hmesh/tests/: hmesh-test.cpp
source/hyporo/hyplib/: CMakeLists.txt
source/hyporo/hyplib/array/: array.hpp  dynamic_array.hpp  iterator.hpp  static_array.hpp
source/hyporo/hyplib/integer/: integer.hpp
source/hyporo/hyplib/io/: file.cpp  file.hpp  io.hpp
source/hyporo/hyplib/matrix/: MatrixSpace.hpp  MatrixSpace.hxx  clip_space.hpp  matrix.hpp  matrix_space.cpp  matrix_space.hpp  transform.hpp
source/hyporo/hyplib/scalar/: scalar.cpp  scalar.hpp
source/hyporo/hyplib/tests/: hyplib-test.cpp  mytest.cpp
source/hyporo/hyplib/vector/: VectorSpace.hpp  VectorSpace.hxx  vector.hpp  vector_space.cpp  vector_space.hpp
source/hyporo/window_system/: CMakeLists.txt  monitor.hpp  window.hpp  window_context.hpp
source/hyporo/window_system/glfw/: window.cpp  window.hpp  window_system.cpp
