
# Modules
add_subdirectory(core)
add_subdirectory(containers)
add_subdirectory(math)
add_subdirectory(io)
add_subdirectory(mesh)
add_subdirectory(geometry)

if(WITH_CSG)
    include(${CMAKE_SOURCE_DIR}/cmake/external/occt.cmake)
    add_subdirectory(csg)
endif()
if(WITH_GPU)
    include(${CMAKE_SOURCE_DIR}/cmake/external/glad.cmake)
    include(${CMAKE_SOURCE_DIR}/cmake/external/stb.cmake)
    add_subdirectory(gpu)
endif()
if(WITH_WINDOW_SYSTEM)
    include(${CMAKE_SOURCE_DIR}/cmake/external/glfw.cmake)
    add_subdirectory(window_system)
endif()
